--- a/app/src/main/res/layout/frag_det.xml
+++ b/app/src/main/res/layout/frag_det.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#CDCFCC"
+    android:background="@color/color6"
     android:orientation="vertical"
     app:behavior_hideable="true"
     app:behavior_peekHeight="180dp"
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
+            android:background="@color/color7"
             android:orientation="vertical">
 
             <ImageView
@@ -88,6 +89,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/color7"
             android:orientation="horizontal">
 
             <ImageView
@@ -110,6 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|top"
+            android:background="@color/color7"
             android:padding="35dp"
             android:orientation="vertical">
 
