--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color7"
         android:orientation="vertical"
         android:layout_margin="0dp"
         android:gravity="left">
@@ -45,7 +46,7 @@
             android:fontFamily="@font/open_sans"
             android:text="Uluwatu temple"
             android:minLines="3"
-            android:textColor="#888A88"
+            android:textColor="@color/color8"
             android:textSize="13sp" />
 
     </LinearLayout>
