--- a/app/src/main/res/layout/frag_det.xml
+++ b/app/src/main/res/layout/frag_det.xml
@@ -5,8 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/color6"
     android:orientation="vertical"
-    app:behavior_hideable="true"
+    app:behavior_hideable="false"
     app:behavior_peekHeight="180dp"
+    android:id="@+id/bar_det"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <androidx.cardview.widget.CardView
